--- a/jsons/translations/English.properties
+++ b/jsons/translations/English.properties
@@ -8,7 +8,8 @@ Gift [giftAmount] gold (+[influenceAmount] influence) = Gift [giftAmount] water 
 
 Build [improvementName] on [resourceName] (200 Gold) = Build [improvementName] on [resourceName] (200 Water)
 
-Diplomatic Marriage ([amount] Gold) = Diplomatic Marriage ([amount] Water)
+# more on diplomatic marriage later
+Diplomatic Marriage ([amount] Gold) = Corporate Merger ([amount] Water)
 
 At least 0 to take gold, at least 30 and size 4 city for worker = At least 0 to take water, at least 30 and size 4 city for worker
 
@@ -70,9 +71,7 @@ Give Gold = Give Water
 
 Grants 500 Gold to the first civilization to discover it = Grants 500 water to the first civilization to discover it
 
-Costs [amount] gold per turn when in your territory = Costs [amount] water per turn when in your territory
-
-Can spend Gold to annex or puppet a City-State that has been your ally for [amount] turns. = Can spend Water to annex or puppet a City-State that has been your ally for [amount] turns.
+Can spend Gold to annex or puppet a City-State that has been your ally for [amount] turns. = Can spend Water to annex or puppet a City-State that has been your ally for [amount] turns
 
 Gifts of Gold to City-States generate [relativeAmount]% more Influence = Gifts of Water to City-States generate [relativeAmount]% more Influence
 
@@ -84,8 +83,6 @@ Gifts of Gold to City-States generate [relativeAmount]% more Influence = Gifts o
 We have received [goldAmount] Gold for discovering [naturalWonder] = We have discovered a settlement on an isolated island! The inhabitants send a gift of [goldAmount] water and offer tribute if we respect their sovereignty.
 
 # city-state stuff
-
-Maritime = Farming
 
 Find Natural Wonder = Find Ancient Wonder
 
@@ -117,8 +114,6 @@ Natural Wonder = Ancient Wonder
 
 All units move through Forest and Jungle Tiles in friendly territory as if they have roads. These tiles can be used to establish City Connections upon researching the Wheel. = All units move through Rubble and Ruins Tiles in friendly territory as if they have roads. These tiles can be used to establish City Connections upon researching the Wheel.
 
-Enemy land units must spend 1 extra movement point when inside your territory (obsolete upon Dynamite) = Enemy land units must spend 1 extra movement point when inside your territory
-
 # great prophet stuff
 
 May not generate great prophet equivalents naturally = May not generate great sage equivalents naturally
@@ -128,3 +123,9 @@ Gain enough Faith for [amount]% of a Great Prophet = Gain enough Faith for [amou
 Hidden after generating a Great Prophet = Hidden after generating a Great Sage
 
 [amount]% Faith cost of generating Great Prophet equivalents = [amount]% Faith cost of generating Great Sage equivalents
+
+# diplomatic marriage to corporate merger
+
+We have married into the ruling family of [civName], bringing them under our control. = We have merged with [civName], bringing them under our control.
+
+[civName] has married into the ruling family of [civName2], bringing them under their control. = [civName] has merged with [civName2], bringing them under their control.
