- Fix city-state outputs - Warrior now gives Faith for killing units - added Stimulants city-state resource - miscellaneous graphics fixes

--- a/jsons/translations/English.properties
+++ b/jsons/translations/English.properties
@@ -2,6 +2,8 @@
 
 Gold = Water
 
+gold = water
+
 Enter the amount of gold = Enter the amount of water
 
 Gift [giftAmount] gold (+[influenceAmount] influence) = Gift [giftAmount] water (+[influenceAmount] influence)
@@ -28,6 +30,8 @@ Barbarians raided [cityName] and stole [amount] Gold from your treasury! = Barba
 [building] has provided [amount] Gold! = [building] has provided [amount] Water!
 
 Upgrade to [unitType] ([goldCost] gold) = Upgrade to [unitType] ([goldCost] water)
+
+Upgrade to [unitType]\n([goldCost] gold, [resources]) = Upgrade to [unitType]\n([goldCost] water, [resources])
 
 Disband this unit for [goldAmount] gold? = Disband this unit for [goldAmount] water?
 
