--- a/jsons/translations/German.properties
+++ b/jsons/translations/German.properties
@@ -131,53 +131,52 @@ Militia = Miliz
 Swordsman = Schwertkämpfer
 Guerilla = Guerilla
 Grenadier = Grenadier
-Spec Ops =
-Gunman =
-Ranger =
-Contractor =
-Marksman =
-Modern Infantry =
-Sharpshooter =
-Sniper =
-Linked Infantry =
+Spec Ops = Sondereinsatzkommando
+Gunman = Schütze
+Ranger = Ranger
+Contractor = Kontractor
+Marksman = Scharfschütze
+Modern Infantry = 
+Sharpshooter = Scharfschütze
+Sniper = Sniper
+Linked Infantry = 
 Linked Sniper =
-Biker =
-Bandit =
-Raider =
-Skirmisher =
-Marauder =
-Insurgent =
-Partizan =
-Arroyo Warrior =
-Arroyo Archer =
-Ghost Warrior =
-Ghost Archer =
-Howitzer =
-Ancient Armor =
-Attack Vehicle =
-War Buggy =
-Armored Car =
-Big Rig =
-Technical =
-Missile Vehicle =
-Advanced Armor =
-Strike Drone =
-Jet Fighter =
-Helicopter =
-Attack Helicopter =
-Patrol Boat =
-Attack Boat =
+Biker = Biker
+Bandit = Bandit
+Raider = Plünderer
+Skirmisher = Plänkler
+Marauder = Marodeur
+Insurgent = Aufrührer
+Partisan = Partisan
+Arroyo Warrior = Arroyo Krieger
+Arroyo Archer = Arroyo Bogenschütze
+Ghost Warrior = Ghost Krieger
+Ghost Archer = Ghost Bogenschütze
+Howitzer = Howitzer
+Ancient Armor = Antiker Panzer
+Attack Vehicle = Angriffsfahrzeug
+War Buggy = Kriegsbuggy
+Armored Car = Panzerwagen 
+Big Rig = Big Rig
+Technical = Technical
+Missile Vehicle = Raketenfahrzeug
+Advanced Armor = Fortgeschrittener Panzer
+Strike Drone = Strike Drohne
+Jet Fighter = Kampfjet
+Helicopter = Helikopter
+Attack Helicopter = Kampfhubschrauber
+Patrol Boat = Patrouillenboot
+Attack Boat = Angriffsboot
 Great Administrator =
-Great Prophet =
-Standard Bearer =
-Bugler =
-Demolition Track =
-Dragoon =
+Great Sage = Großer Weiser
+Standard Bearer = Standartenträger
+Bugler = Hornist
+Demolition Track = Abbrisswagen
+Dragoon = Dragoner
 Horse Archer =
-Hussar =
-Light Cavalry =
-Ignis Worker =
-Looter =
+Hussar = Hussar
+Light Cavalry = Leichte Kavallerie
+Looter = Looter
 Arroyo Defender =
 Arroyo Greatbow =
 Arroyo Militia =
@@ -202,25 +201,13 @@ Ghost Cavalry =
 Ghost Skirmisher =
 Ghost Dragoon =
 Ghost Light Cavalry =
-Legion Worker =
-Legion Archer =
-Ignis Militia =
-Soldier =
-Ignis Soldier =
-Legion Infantry =
-Ignis Infantry =
-Legion Gunman =
-Ignis Gunman =
-Legion Rifleman =
-Ignis Rifleman =
-Salvaged Bomber =
-Salvaged Helicopter =
-Legion Modern Infantry =
-Legion Marksman =
-Legion Sharpshooter =
-Fighter Drone =
-Rebel =
-Irregular =
+Soldier = Soldat
+Salvaged Bomber = Geborgener Bomber
+Salvaged Helicopter = Geborgener Helikopter
+Fighter Drone = Jagddrohne
+Rebel = Rebell
+Irregular = Irreguläre
+
 
 # Terrain
 Spring =
