--- a/jsons/translations/German.properties
+++ b/jsons/translations/German.properties
@@ -210,17 +210,17 @@ Irregular = Irreguläre
 
 
 # Terrain
-Spring =
-Toxic Waste =
-Army Depot =
-Hydroelectric Dam =
-Isolated Island =
-Missile Complex =
-Nuclear Waste Storage =
-Research Facility =
-Seed Vault =
-Ship Graveyard =
-Soft Drinks Factory =
+Spring = Quelle
+Toxic Waste = Giftiger Abfall
+Army Depot = Armee Depot
+Hydroelectric Dam = Wasserkraftwerk
+Isolated Island = Isolierte Insel
+Missile Complex = Raketenkomplex
+Nuclear Waste Storage = Atommülllager
+Research Facility = Forschungsanlage
+Seed Vault = Seed Vault
+Ship Graveyard = Schiffsfriedhof
+Soft Drinks Factory = Soft Drinks Fabrik
 
 # Buildings
 Bomb Shelter =
