--- a/jsons/translations/German.properties
+++ b/jsons/translations/German.properties
@@ -223,11 +223,11 @@ Ship Graveyard = Schiffsfriedhof
 Soft Drinks Factory = Soft Drinks Fabrik
 
 # Buildings
-Bomb Shelter =
-Stockpile =
-Ark One =
-Atlas Refuge =
-Eagle Rock Complex =
+Bomb Shelter = Luftschutzbunker
+Stockpile = Vorratshalde
+Ark One = Arche One
+Atlas Refuge = Atlas Zuflucht
+Eagle Rock Complex = Eagle Rock Komplex
 Peace Memorial =
 Longhouse =
 The Great Lighthouse =
