--- a/jsons/translations/German.properties
+++ b/jsons/translations/German.properties
@@ -207,7 +207,15 @@ Salvaged Helicopter = Geborgener Helikopter
 Fighter Drone = Jagddrohne
 Rebel = Rebell
 Irregular = Irreguläre
-
+Swarm = Schwarm
+Wild Dog = Wilder Hund
+Outlaw = Gesetzloser
+Charro = Charro
+Highwayman = Wegelagerer
+Robber = Räuber
+Sandrail = Sandrail
+Junker = Blechkiste
+Jalopy = Alte Kiste
 
 # Terrain
 Spring = Quelle
