--- a/jsons/translations/Simplified_Chinese.properties
+++ b/jsons/translations/Simplified_Chinese.properties
@@ -167,7 +167,7 @@ Energy farm = 燃料农场
 Modular island = 模块化人工岛
 Research site = 古物研究场
 Salvage site = 回收场
-Survivor camp = 生存营
+Survivor camp = 幸存者营地
 Outpost = 前线要塞
 Narcotics farm = 禁药庄园
 Prison farm = 劳动所
@@ -181,7 +181,7 @@ Artificial oasis = 人造绿洲
 Artificial glacier = 人造冰川
 
 Oracle = 圣谕所
-Seminary = 思想学院
+Seminary = 神学院
 
 Refinery = 精炼厂
 Crystal Refinery = 晶体精炼厂
@@ -394,9 +394,9 @@ Stasis Cruiser = 淤滞巡洋舰
 
 Nuclear Submarine = 核子动力潜艇
 
-Philosopher = 播道者
+Philosopher = 哲学家
 
-Censor = 审查队
+Censor = 审查员
 
 Great Administrator = 大总督
 
@@ -680,7 +680,7 @@ Think Tank = 集思智库
 Smugglers' Guild = 走私公会
 Grand Clan Manor = 亡石家族大庄园
 Can produce Black Hand infantry = 可生产黑手党亲卫单位
-Senate = 元老会
+Senate = 元老院
 Consulate = 远征领事馆
 War Council = 圣战议会
 Seer Council = 圣学议会
@@ -826,7 +826,7 @@ Town Hall = 市政厅
 Commune = 子嗣公社
 Personnel Office = 人力资源办公室
 Casino = 赌场
-Slave Market = 奴隶拍卖场
+Slave Market = 奴隶市场
 Television Studio = 电视摄影棚
 Broadcast Network = 电视广播网络
 Provides [stats] per [amount] social policies adopted = 每推行 [amount] 社会政策提供 [stats] 
