[Translation][Simplified Chinese] fix

--- a/jsons/translations/Simplified_Chinese.properties
+++ b/jsons/translations/Simplified_Chinese.properties
@@ -2159,7 +2159,7 @@ Big Rig = 大卡车
 
 #################### Lines from UnitTypes ####################
 
-Land = 陆地单元
+Land = 陆地
 
 
 Can pass through impassable tiles = 可移动至不可通行的地块
@@ -2346,9 +2346,10 @@ Quadcopter Drone = 四翼无人机
 
 Jet Fighter = 喷射战斗机
 
-Stealth Fighter = 隐身战士
+Stealth Fighter = 隐身战斗机
 Can only be intercepted by [param] = 仅可被 [param] 拦截
 
+Fighter Drone = 无人拦截机
 Fighter Drone = 无人拦截机
 
 
@@ -2385,7 +2386,7 @@ Jet Boat = 快艇战士
 Stasis Cruiser = 淤滞巡洋舰
 
 
-Heavy Carrier = 大型晶体运载机
+Heavy Carrier = 大型航母
 
 
 Nuclear Submarine = 核子动力潜艇
@@ -2487,7 +2488,7 @@ Atmosphere Processor = 大气层处理单元
  # Requires translation!
 Complete all the terraformer parts\nto win! = 
  # Requires translation!
-terraformer parts = 
+terraformer parts = 生态重建工程零件
  # Requires translation!
 You have achieved victory through mastery of Science! With the Terraformer complete, you can start the arduous process of stabilising the Earth's systems to make them amenable for human life. It could take centuries, but your descendants will know that it was here that the tide was turned.\n\nIn the meantime, a Solar Shade can literally block out the sun for those that would oppose you... = 
 
