--- a/jsons/translations/Simplified_Chinese.properties
+++ b/jsons/translations/Simplified_Chinese.properties
@@ -1,3 +1,8 @@
+################ Crucial Deciv override #############
+Gold = 水源
+gold = 水源
+
+
 
 #################### Lines from Beliefs ####################
 
