[Translation][Simplified Chinese] update Proklyatyye

--- a/jsons/translations/Simplified_Chinese.properties
+++ b/jsons/translations/Simplified_Chinese.properties
@@ -174,10 +174,10 @@ We declare our right on this earth to be a human being, to be respected as a hum
 Clan Hideout = 大匪党老巢
 If you would keep your secret from an enemy, tell it not to a friend. = “若要将秘密藏于敌人无可及之处，那么就不要轻易向任何人透露，即使为最亲密之人。”
 
- # Requires translation!
-Sarcophagus = 
- # Requires translation!
-There is a sickness in the earth. You can feel it in the air we breathe and the water we drink. We have poisoned our mother. All we can do now is try to make things right. = 
+
+Sarcophagus = 石棺
+
+There is a sickness in the earth. You can feel it in the air we breathe and the water we drink. We have poisoned our mother. All we can do now is try to make things right. = 地球上有一种疾病，它时时刻刻存在于我们呼吸的空气和饮用的水中。 我们毒害了我们的母亲。 我们现在所能做的就是努力把事情做好。
 
 Utopia Project = 乌托邦计划
 
@@ -276,11 +276,9 @@ Survival Program = 生存者项目
 
 Revolutionary Council = 革命议会
 
- # Requires translation!
-Five-Year Plan = 
+Five-Year Plan = 五年计划
 
- # Requires translation!
-Gulag = 
+Gulag = 劳改营
 
 Biosphere Project = 地球重生计划
 Terraformer Part = Terraformer零件
@@ -447,9 +445,7 @@ Organ Farm = 器官收割场
 
 Blood Bank = 血库
 
- # Requires translation!
-Decontamination Center = 
-
+Decontamination Center = 消杀中心
 
 Organ Lab = 器官培植实验室
 
@@ -588,8 +584,7 @@ Chop Shop = 拆车场
 
 Scrounged Armory = 搜刮军械库
 
- # Requires translation!
-Calutron = 
+Calutron = 同位素分离器
 
 Blast Furnace = 高炉
 
@@ -609,9 +604,7 @@ Tidal Plant = 潮汐发电厂
 
 Coal Plant = 燃煤发电厂
 
-
- # Requires translation!
-Atomic Pile = 
+Atomic Pile = 原子堆
 
 Recycling Plant = 回收资源发电厂
 
@@ -1274,132 +1267,71 @@ Pi-Ramesses = 派•拉美西斯
 Byblos = 比布鲁斯
 New Afrika = 新非大教国
 
- # Requires translation!
-Trofim Bugorski = 
- # Requires translation!
-Your lands look fertile. We'll take them. = 
- # Requires translation!
-So you think you can destroy us? Let us see if our sickness can destroy you first! = 
- # Requires translation!
-Just promise me that you will try to heal this dying world. = 
- # Requires translation!
-Hello, stranger! I would shake your hand, but it is better if you do not touch me. = 
- # Requires translation!
-Radioactivity = 
+Trofim Bugorski = 书记 特罗菲姆·布戈尔斯基
+Your lands look fertile. We'll take them. = 你的土地看起来肥沃，我们要了。
+So you think you can destroy us? Let us see if our sickness can destroy you first! = 所以你以为你可以摧毁我们吗？先看看我们的疾病是否可以首先摧毁你！
+Just promise me that you will try to heal this dying world. = 仅仅向我保证，你将尝试治愈这个垂死的世界。
+Hello, stranger! I would shake your hand, but it is better if you do not touch me. = 你好，来自远方的陌生人！ 我想握手，但是最好不要碰我。
+Radioactivity = 辐射之地
  # Requires translation!
 Perhaps it would have been better if man had never split the atom. If only we could go back and make it so no one could harness nuclear energy... Maybe then, we would never have burned the world to the ground. Maybe then you would not feel the sickness in your bones. But all that is in the past. We have to live with it now, no? But here is our secret: we can live with it, and they cannot. They have no stomach for radiation. And so this curse upon the land is a blessing to us. The sickness goes before us and destroys our enemies, leaving only us alive. That is not so bad now, is it? = 
  # Requires translation!
 This sick and dying world is our birthright. Let us go and claim it all for ourselves, and see if we cannot make a heaven out of this hell. = 
- # Requires translation!
-Shchyolkovo-14 = 
- # Requires translation!
-Kartaly-6 = 
- # Requires translation!
-Arzamas-75 = 
- # Requires translation!
-Stupino-7 = 
- # Requires translation!
-Krasnoyarsk-45 = 
- # Requires translation!
-Krasnoyarsk-66 = 
- # Requires translation!
-Sverdlovsk-44 = 
- # Requires translation!
-Murmansk-150 = 
- # Requires translation!
-Bologoe-4 = 
- # Requires translation!
-Krasnoyarsk-26 = 
- # Requires translation!
-Beloretsk-15 = 
- # Requires translation!
-Zlatoust-20 = 
- # Requires translation!
-Chita-46 = 
- # Requires translation!
-Zlatoust-36 = 
- # Requires translation!
-Perm'-76 = 
- # Requires translation!
-Yur'ya-2 = 
- # Requires translation!
-Petropavlovsk-Kamchatskiy-35 = 
- # Requires translation!
-Semipalatinsk-121 = 
- # Requires translation!
-Shkotovo-17 = 
- # Requires translation!
-Zagorsk-7 = 
- # Requires translation!
-Kosulino-1 = 
- # Requires translation!
-Uzhur-4 = 
- # Requires translation!
-Tatishchevo-5 = 
- # Requires translation!
-Kapustin Yar-1 = 
- # Requires translation!
-Olovyannaya-4 = 
- # Requires translation!
-Dombrovskiy-3 = 
- # Requires translation!
-Petropavlovsk-Kamchatskiy-50 = 
- # Requires translation!
-Nizhny-Tagil-39 = 
- # Requires translation!
-Beloretsk-16 = 
- # Requires translation!
-Chelyabinsk-65 = 
- # Requires translation!
-Chelyabinsk-115 = 
- # Requires translation!
-Alkino-2 = 
- # Requires translation!
-Murmansk-60 = 
- # Requires translation!
-Svobodnyy-18 = 
- # Requires translation!
-Tomsk-7 = 
- # Requires translation!
-Murmansk-140 = 
- # Requires translation!
-Murmansk-130 = 
- # Requires translation!
-Krasnoyarsk-95 = 
- # Requires translation!
-Chelyabinsk-40 = 
- # Requires translation!
-Sverdlovsk-45 = 
- # Requires translation!
-Chelyabinsk-95 = 
- # Requires translation!
-Chelyabinsk-70 = 
- # Requires translation!
-Arzamas-60 = 
- # Requires translation!
-Shkotovo-26 = 
- # Requires translation!
-Krasnoyarsk-35 = 
- # Requires translation!
-Naro-Fominsk-5 = 
- # Requires translation!
-Kurchatov-21 = 
- # Requires translation!
-Penza-19 = 
- # Requires translation!
-Novopetrovsk-2 = 
- # Requires translation!
-Arzamas-16 = 
- # Requires translation!
-Golitsino-2 = 
- # Requires translation!
-Semipalatinsk-16 = 
- # Requires translation!
-Krasnoyarsk-25 = 
- # Requires translation!
-Shkotovo-22 = 
- # Requires translation!
-Proklyatyye = 
+Shchyolkovo-14 = 晓尔科沃-14
+Kartaly-6 = 卡尔塔里-6
+Arzamas-75 = 阿尔扎马斯-75
+Stupino-7 = 斯图皮诺-7
+Krasnoyarsk-45 = 克拉斯诺亚尔斯克-45
+Krasnoyarsk-66 = 克拉斯诺亚尔斯克-46
+Sverdlovsk-44 = 斯维尔德洛夫斯克-44
+Murmansk-150 = 摩尔曼斯克-150
+Bologoe-4 = 博洛戈-4
+Krasnoyarsk-26 = 克拉斯诺亚尔斯克-26
+Beloretsk-15 = 别洛列茨克-15
+Zlatoust-20 = 兹拉托乌斯特-20
+Chita-46 = 赤塔-46
+Zlatoust-36 = 兹拉托乌斯特-36
+Perm'-76 = 彼尔姆-76
+Yur'ya-2 = 由莉亚-2
+Petropavlovsk-Kamchatskiy-35 = 堪察加彼得罗巴甫洛夫斯克-35
+Semipalatinsk-121 = 塞米巴拉金斯克-121
+Shkotovo-17 = 什科托沃-17
+Zagorsk-7 = 扎戈尔斯克-7
+Kosulino-1 = 科苏利诺-1
+Uzhur-4 = 乌祖尔-4
+Tatishchevo-5 = 塔季谢沃-5
+Kapustin Yar-1 = 卡普斯廷亚尔-1 
+Olovyannaya-4 = 锡纳亚-4
+Dombrovskiy-3 = 东布罗夫斯基-3
+Petropavlovsk-Kamchatskiy-50 = 堪察加彼得罗巴甫洛夫斯克-50
+Nizhny-Tagil-39 = 下诺夫哥罗德-39
+Beloretsk-16 = 别洛列茨克-16
+Chelyabinsk-65 = 车里雅宾斯克-65
+Chelyabinsk-115 = 车里雅宾斯克-115
+Alkino-2 = 阿尔基诺-2
+Murmansk-60 = 摩尔曼斯克-60
+Svobodnyy-18 = 自姆尼-18
+Tomsk-7 = 托木斯克-7
+Murmansk-140 = 摩尔曼斯克-140
+Murmansk-130 = 摩尔曼斯克-130
+Krasnoyarsk-95 = 克拉斯诺亚尔斯克-95
+Chelyabinsk-40 = 车里雅宾斯克-40
+Sverdlovsk-45 = 斯维尔德洛夫斯克-45
+Chelyabinsk-95 = 车里雅宾斯克-95
+Chelyabinsk-70 = 车里雅宾斯克-70
+Arzamas-60 = 阿尔扎马斯-60
+Shkotovo-26 = 什科托沃-26
+Krasnoyarsk-35 = 克拉斯诺亚尔斯克-35
+Naro-Fominsk-5 = 纳罗福明斯克-5
+Kurchatov-21 = 库尔恰托夫-21
+Penza-19 = 奔萨-19
+Novopetrovsk-2 = 新彼得罗夫斯克-2
+Arzamas-16 = 阿尔扎马斯-16
+Golitsino-2 = 戈利奇诺-2
+Semipalatinsk-16 = 塞米巴拉金斯克-16
+Krasnoyarsk-25 = 克拉斯诺亚尔斯克-25
+Shkotovo-22 = 什科托沃-22
+Proklyatyye = 辐废亚叶斯克
 
 We shall not go gentle into that good night! = 我们将不会温柔地进入下一个美好的夜晚！
 After us, the deluge... = 在我们之后，还会有人记得当年的洪水吗...
@@ -1615,7 +1547,6 @@ We have found an ancient prophecy in the camp, greatly increasing our spiritual 
 
 
 Administrator = 城督
-
 
 Farmer = 农学家
 
@@ -1910,10 +1841,7 @@ Bioculture = 生物培养区
 
 Trench = 堑壕
 
-
- # Requires translation!
-Drum site = 
-
+Drum site = 核废料填埋站
 
 Remove Forest = 折除瓦砾
 
@@ -2193,8 +2121,7 @@ Portable Power Cell = 移动电源
 
 Super Alloy = 超级合金
 
- # Requires translation!
-Radioactive = 
+Radioactive = 反射性
 
 Ranger = 巡逻
 
@@ -2244,6 +2171,7 @@ Divine Spear = 天灾圣枪
 Tactical Nuke = 战术核弹
 # Guided Missile = 
 # Nuclear Missile = 
+Tsar Bomba = 沙皇炸弹
 ######### Missile [End]
 
 ######### Missile Defense [Start]
@@ -2312,6 +2240,11 @@ Skirmisher = 突袭骑兵
 ## Horseman of Deadrock Clan:
 Rubble Rider = 废墟骑手战帮
 ######### Mounted [End]
+
+######### Proklyatyye [Start]
+## Scrapper unique to Proklyatyye:
+Mutant = 变种人
+######### Proklyatyye [End]
 
 #################  Low Tech [End]   #################
 
@@ -2393,6 +2326,8 @@ Hussar = 骠骑兵
 # Cavalry = 近代骑兵
 Dragoon = 龙骑兵
 Light Cavalry = 现代轻骑兵
+## Cavalry of Proklyatyye：
+Cossack = 哥萨克骑兵
 ######### Mounted [End]
 
 
@@ -2405,7 +2340,12 @@ Special Forces = 特种军队
 Drop Troops = 空降特种部队
 ######### Paradrop [End]
 
-
+######### Proklyatyye [Start]
+## Shooter
+Desolator = 荒芜使者
+## Shooter
+Contaminator = 污染者
+######### Proklyatyye [End]
 
 ################ Personnel [End]   #################
 
@@ -2454,6 +2394,8 @@ Crystal Carrier = 晶体运载机
 
 ######### Helicopter [Start]
 Blimp = 飞艇
+## Blimp of Proklyatyye：
+Sky Cruiser = 巡天舰
 # Helicopter = 
 Attack Helicopter = 武装直升机
 Hovercraft = 悬浮船
@@ -2532,6 +2474,7 @@ Smuggler = 走私商
 Slave Trader = 奴隶贩子
 # Great Engineer = 
 # Great General = 
+Upyr = 血主(Upyr)
 Great Mad Scientist = 疯狂科学家
 Gangboss = 战帮老大
 Bugler = 车队司号乐手
