[Translation][Simplified Chinese] fix

--- a/jsons/translations/Simplified_Chinese.properties
+++ b/jsons/translations/Simplified_Chinese.properties
@@ -3,6 +3,8 @@ Gold = 水源
 gold = 水源
 
 
+Remove Forest = 折除瓦砾
+Remove Jungle = 折除废墟
 
 #################### Lines from Beliefs ####################
 
@@ -821,7 +823,7 @@ Singularity era = 奇点时代
 #################### Lines from Nations ####################
 
 
-Willand Keiji = 营长诺地·开基
+Willand Keiji = 营长 诺地·开基
 Let's go! = 出发吧
 Everyone! Defense Positions! = 所有人！防御准备！
 This is... not the end. = 这...这还没有结束！
@@ -851,7 +853,7 @@ Light Otis = 光奥的斯
 Meckenberg = 梅肯伯格
 New Star = 希望之星
 
-Aura = 董事长奥拉
+Aura = 董事长 奥拉
 Hexlock = 六边重工
 Congratulations. You will help me test my new advancements. = 恭喜！你将助我取得新的事业。
 Now isn't that interesting? = 何不有趣？
@@ -1087,7 +1089,7 @@ Skousen Ranch = 士高斯牧地
 30-50 Feral Hogs = 野猪群地
 Enclavers = 世外飞地
 
-Boss Karl = 大老爷卡尔
+Boss Karl = 大老爷 卡尔
 Gang = 帮派
 You are mine! = 你的一切皆归我所有！
 As you were warned, if you dare mess with any one of us, you're messing with me, and my entire Clan! = 正如我先前警告，敢惹我的人，你就是杠上了我——你现在要面对的是整个大匪党！
@@ -1161,7 +1163,7 @@ Canis Canem Edit = 弱肉强食
 Ad Astra = 长征天星
 Crimson Legion = 绯红军团
 
-Ignitor Martina = 火教头玛蒂娜
+Ignitor Martina = 火教头 玛蒂娜
 Ignis = 信徒
 Rejoice! Your profane forms will soon become one with the Exhaust! = 欢愉吧！你那亵渎的存在很快就会与〈废气〉成为一体！
 Your offering is welcome! We shall oxidize together in blessed combustion! = 圣火教欢迎你的献祭！ 我们将在〈祝福之焰〉中一起燃烧殆尽！
@@ -1200,7 +1202,7 @@ Death Race = 死亡赛场
 God Box = 神之盒
 Cult of Ignis = 圣火教
 
-Deacon Hopper = 海王帝穹•霍珀
+Deacon Hopper = 海王 帝穹•霍珀
 Tribal = 部落
 The sea is ours, and all the dry lands shall soon be as well! = 不仅海洋，陆地上一切财富也将尽归俺们！
 Ha! You think to challenge us? I hope you can swim well. = 哈！旱鸭子想挑战俺们？俺倒是期望看见你会不会游泳！
@@ -1512,8 +1514,7 @@ Naturism = 自然崇拜
 
 Idolatry = 偶像崇拜
 
-
-Posadism = 阴阳怪气
+Posadism = 外星降神
 
 
 #################### Lines from Ruins ####################
@@ -1843,13 +1844,7 @@ Trench = 堑壕
 
 Drum site = 核废料填埋站
 
-Remove Forest = 折除瓦砾
-
-Remove Jungle = 折除废墟
-
-
 Remove Toxic Waste = 移除有毒废物
-
 
 Settlement = 殖民地
 
@@ -1865,6 +1860,7 @@ Oracle = 圣谕所
 Seminary = 思想学院
 
 Crystal Refinery = 晶体精炼厂
+
 Refinery = 精炼厂
 
 Factory farm = 农业工厂
@@ -2272,7 +2268,7 @@ Panther = 猎豹勇士
 
 ## (Soldier, require Tech Rifling, upgrade from Militia) ##
 Soldier = 荒土步兵
-#$ Soldier of New Afrika:
+## Soldier of New Afrika:
 Black Beret = 黑帽军团
 
 ## (Enslaved, upgrade from Auxiliary) ##
