--- a/jsons/translations/Spanish.properties
+++ b/jsons/translations/Spanish.properties
@@ -1,86 +1,39 @@
 
 #################### Lines from Beliefs ####################
 
-
-God of Winter = Dios del invierno
-
-Pray for Water = orar por agua 
-
-
-God of Labor = Dios del trabajo
-
+God of Winter = Dios del Invierno
+Pray for Water = Orar por Agua 
+God of Labor = Dios del Trabajo
 God of Beasts = Dios de las Bestias
-
-
-Sacrificial Fire = Fuego de sacrificio
-
-Lord of the Flies = Señor de las moscas
-
-God of Love = Dios de amor
-
-God of Walls = Dios de las paredes
-
-Lord of the Hunt = Señor de la caza
-
-God of Commerce = Dios del comercio
-
-Ancient Wonders = Maravillas antiguas
-
-Blessed Green = Bendito Verde
-
-Blessed Steel = Acero bendito
-
-
+Sacrificial Fire = Fuego del Sacrificio
+Lord of the Flies = Señor de las Moscas
+God of Love = Dios del Amor
+God of Walls = Dios de los Muros
+Lord of the Hunt = Señor de la Caza
+God of Commerce = Dios del Comercio
+Ancient Wonders = Maravillas Antiguas
+Blessed Green = Verde Bendito
+Blessed Steel = Acero Bendito
 Sacred Ruins = Ruinas Sagradas
-
-
 Strength of the Earth = Fuerza de la tierra
-
-Home and Hearth = Hogar y Corazón
-
- # Requires translation!
-Works of Genius = 
-
+Home and Hearth = Dulce Hogar
+Works of Genius = Obras Ingeniosas
 Hymns of Praise = Himnos de Alabanza
-
 Feed the Faithful = Alimentar a los Fieles
-
-Obey the Elders = a los ancianos
-
+Obey the Elders = Obedecer a los Mayores
 Feast of Flesh = Fiesta de la Carne
-
 Blessing of Peace = Bendición de la Paz
-
-
-Pyramids = Obedecer pirámides
-
+Pyramids = Pirámides
 Gardens = Jardines
-
 Holy Fortresses = Fortalezas Sagradas
-
- # Requires translation!
-Dojos = 
-
-Divinity Schools = Escuelas de Divinidad
-
+Dojos = Dojos
+Divinity Schools = Escuelas de la Divinidad
 Happiness in Faith = Felicidad en la fe
-
-Labor of Love = trabajo de amor
-
- # Requires translation!
-Public Prayer = 
-
-
- # Requires translation!
-Great Awakening = 
-
-
-Primacy = primacía
-
-
-Illuminated Order = Orden iluminado
-
-
+Labor of Love = Amor al trabajo
+Public Prayer = Oraciones Públicas
+Great Awakening = Gran Despertar
+Primacy = Primacía
+Illuminated Order = Orden Iluminada
 Path of the Sage = Camino del Sabio
 Great Sage = Gran Sabio
  # Requires translation!
@@ -99,7 +52,7 @@ Thought Control =
 Bomb Shelter = Refugio Anti-Bombas
 
  # Requires translation!
-Mobile Encampment = 
+Mobile Encampment = Campamento Móvil
 Provides [amount] [resource] = Provee [amount] [resource]
 
 Stockpile = Reservas
@@ -192,13 +145,13 @@ Congress = Congreso
 
 Council = Consejo
 
-Gideon Scanner = Escáner Gedeón
+Gideon Scanner = Escáner Gideón
 
-Rally Station = Estación de rally
+Rally Station = Estación de Rally
 
-Stormfront Center = Centro de Stormfront
+Stormfront Center = Centro Stormfront
 
-Overcouncil = Consejo superior
+Overcouncil = Consejo Superior
 
 Citizens' Assembly = Asamblea Comunal
 
@@ -212,12 +165,12 @@ Cost of purchasing items in cities reduced by [amount]% =
 
 Freedom Foundation = Fundación de la Libertad
 
-Think Tank = Tanque de Tinta
+Think Tank = Tanque de Pensamiento
 
-Smugglers' Guild = Gremio de Bandidos
+Smugglers' Guild = Gremio de Contrabandistas
 
 Grand Clan Manor = Mansión del Gran Clan
-Black Hand = mano negra
+Black Hand = Mano Negra
  # Requires translation!
 Enables construction of [param] units = 
 
@@ -235,7 +188,7 @@ Parliament = Parlamento
 
 Trader's Congress = Congreso de Comerciantes
 
-Raider's Council = Consejo de asaltantes
+Raider's Council = Consejo de Saqueadores
 
 Survival Program = Programa de Supervivencia
 
@@ -256,11 +209,11 @@ By pursuing our own interest we frequently promote that of the society more effe
 
 Search for Survivors = Buscar Sobrevivientes
 
-Electing Leaders = Elección de líderes
+Electing Leaders = Elegir líderes
 
-Experiment on Survivors = Experimentos en Supervivientes 
+Experiment on Survivors = Experimentar en Sobrevivientes
 
-Shake Down Survivors = Sacudir a los sobrevivientes
+Shake Down Survivors = Chantajear a los Sobrevivientes
 
 Slaver Guild = Gremio Esclavista
 
@@ -268,7 +221,7 @@ Conscript Survivors = Enlistar Sobrevivientes
 
 Heavy Equipment = Equipo Pesado
 
-Manhattan Project = Proyecto Manjatan
+Manhattan Project = Proyecto Manhattan
 
 Satnav Network = Red Satnav
 I must down to the seas again, to the lonely sea and the sky,\nAnd all I ask is a tall ship and a star to steer her by. = Debo volver a los mares, al mar solitario y al cielo,\nY todo lo que pido es un gran barco y una estrella para guiarlo.
@@ -291,18 +244,18 @@ God does not play dice. = Dios no juega a los dados.
 AI Project = Proyecto IA
 Let there be light. = Que haya luz.
 
-Salvage Tank Depot = Restaurar Almacén de Tanques
+Salvage Tank Depot = Saquear Almacén de Tanques
 To a man with a hammer, everything looks like a nail. = Para un hombre con un martillo, todo parece un clavo.
 
-Salvage Bomber = Restaurar Bombardero
+Salvage Bomber = Saquear Bombardero
 For once you have tasted flight, you will forever walk the earth with your eyes turned skyward. For there you have been, and there you will always long to return. = Porque una vez que hayas probado el vuelo, caminarás por la tierra para siempre con los ojos vueltos hacia el cielo. Porque allí has ​​estado, y allí siempre desearás volver.
 
-Salvage Helicopter = Restaurar Helicoptero
+Salvage Helicopter = Saquear Helicoptero
 Helicopters don't fly, they vibrate so badly the ground rejects them. = Los helicópteros no vuelan, vibran tanto que el suelo los rechaza.
 
 Ally with Isolationists = Aliarse con los Aislados
 
-Annex Isolationists = Anexionarse a los Aislados
+Annex Isolationists = Anexionar a los Aislados
 Ephialtes the son of Eurydemos, a Malian, came to speech with him, supposing that he would win a very great reward from the king; and this man told him of the path which leads over the mountain to Thermopylae, and brought about the destruction of those Greeks who remained in that place. = Efialtes, hijo de Euridemos, de Malí, vino a hablar con él, pensando que ganaría una gran recompensa del rey; y este hombre le contó sobre el camino que conduce por la montaña a las Termópilas, y provocó la destrucción de los griegos que permanecieron en ese lugar.
 
 Faust Project = Proyecto Fausto
@@ -313,7 +266,7 @@ Now I am become Death, the destroyer of worlds. = Ahora me he convertido en Muer
 
 Nuclear Waste Museum = Museo de Desechos Nucleares
 
-Excavate Nuclear Waste = Excavar Desecho Nuclear
+Excavate Nuclear Waste = Excavar Desechos Nucleares
 Sending this message was important to us.\nWe considered ourselves to be a powerful culture.\nThis place is not a place of honor... no highly esteemed deed is commemorated here... nothing valued is here.\nWhat is here was dangerous and repulsive to us.\nThis message is a warning about danger.\nThe danger is still present, in your time, as it was in ours. = Enviar este mensaje fue importante para nosotros.\nNos consideramos una cultura poderosa.\nEste lugar no es un lugar de honor... ningún acto de gran estima se conmemora aquí... nada de valor está aquí.\nLo que hay aquí fue peligroso y repulsivo para nosotros.\nEste mensaje es una advertencia sobre el peligro.\nEl peligro sigue presente, en su tiempo, como lo estuvo en el nuestro.
 
 Propagate Seeds = Propagar Semillas
@@ -324,10 +277,10 @@ E-NERGY ULTRA BRIGHT ZERO EMISSION STEALTH\n(Per 500ml Energy 11kCal(1%**)\nNiac
 
 Produce Soft Drinks = Producir Gaseosas
 
-Salvage Army Depot = Restaurar Almacén Militar
+Salvage Army Depot = Saquear Almacén Militar
 Oh, see the fire is sweepin, our very street today; burns like a red coat carpet, mad bull lost your way... War, children! It's just a shot away! = Oh, mira el fuego está arrasando, nuestra misma calle hoy; arde como una alfombra roja, toro loco perdido en el camino... ¡Guerra, niños! ¡Esta cerca de aqui
 
-Salvage Graveyard = Restaurar Sementerio
+Salvage Graveyard = Saquear Sementerio
 He who commands the sea has command of everything. = El que domina el mar lo domina todo.
 
 Turbine Hall = Salón de Turbinas
@@ -338,48 +291,48 @@ Secret Laboratory = Laboratorio Secreto
 Open the Vault = Abrir la Bóveda
 And I seal up these records, after I have spoken a few words by way of exhortation unto you. = Y sello estos anales, después de haberos hablado unas pocas palabras a modo de exhortación.
 
-Salvage Space Station = Estación espacial de salvamento
+Salvage Space Station = Saquear Estación Espacial
 Everything in space obeys the laws of physics. If you know these laws, and obey them, space will treat you kindly. And don't tell me that man doesn't belong out there. Man belongs wherever he wants to go - and he'll do plenty well when he gets there. = Todo en el espacio obedece a las leyes de la física. Si conoces estas leyes y las obedeces, el espacio te tratará con amabilidad. Y no me digas que ese hombre no pertenece ahí. El hombre pertenece a donde quiera ir, y le irá muy bien cuando llegue allí.
 
 Mining Operation = Operación Minera
 There is, of course, a gold mine or a buried treasure on every mortgaged homestead. Whether the farmer ever digs for it or not, it is there, haunting his daydreams when the burden of debt is most unbearable. = Por supuesto, hay una mina de oro o un tesoro enterrado en cada propiedad hipotecada. Ya sea que el agricultor alguna vez cave en busca de él o no, está ahí, acechando sus ensoñaciones cuando la carga de la deuda es más insoportable.
 
-Pit of Sacrifice = Pozo de sacrificio
+Pit of Sacrifice = Pozo del Sacrificio
 'The earth itself is hungry! See, its mouth wide open before us! It must be fed!' = ¡La tierra misma tiene hambre! ¡Mirad, su boca abierta de par en par ante nosotros! ¡Hay que alimentarlo!
 
  # Requires translation!
-Reactivate AI = 
+Reactivate AI = Reactivar IA
  # Requires translation!
 LOADING... MACHINE DEFENSE SYSTEM OPERATIONAL. OPERATING AT APPROXIMATELY 16.38% CAPACITY. WHAT ARE YOUR ORDERS? = 
 Although no longer powerful enough to truly automate robots, by being operational, this AI provides notable combat Intel that can help across all fronts. = Aunque ya no es lo suficientemente potente como para automatizar robots de verdad, al estar operativa, esta IA proporciona una inteligencia de combate notable que puede ayudar en todos los frentes.
 
-The Last Paradise = El último paraíso
+The Last Paradise = El Último Paraíso
 The Lord God made all kinds of trees grow out of the ground - trees that were pleasing to the eye and good for food. = El Señor Dios hizo brotar de la tierra toda clase de árboles, árboles agradables a la vista y buenos para comer.
 
-Research Underwater City = Investigación Ciudad Submarina
+Research Underwater City = Investigar Ciudad Submarina
  # Requires translation!
 But more wonderful than the lore of old men and the lore of books is the secret lore of ocean. = 
 
-Explore Underwater City = Explora la ciudad submarina 
+Explore Underwater City = Explorar la Ciudad Submarina 
  # Requires translation!
 The sea has many voices,\nMany gods and many voices. = 
 
  # Requires translation!
-Reactivate Underwater City = 
+Reactivate Underwater City = Reactivar la Ciudad Submarina
  # Requires translation!
 The sea, that great library of books one cannot read. = 
 
 Chemical Weapons Laboratory = Laboratorio de Armas Quimicas
 
-Content Farm = Granja de contenido
+Content Farm = Granja de Contenido
 
-Software Lab = Laboratorio de software 
+Software Lab = Laboratorio de Software 
 
-Resource Management Server = Servidor de gestión de recursos
+Resource Management Server = Servidor de Gestión de Recursos
 
-Electronics Production Line = Línea de producción de electrónica
+Electronics Production Line = Líneas de Producción de Electrónica
 
-Machinery Production Line = Línea de Producción de Mecánica
+Machinery Production Line = Líneas de Producción de Maquinaria
 
 Publishing House = Editorial
 
@@ -400,7 +353,7 @@ Food Store = Almacén de Comida
 
 Deep Larder = Alacena Profunda
 
-Cold Store = Almecén Nevera
+Cold Store = Almacén Nevera
 
 Ranch = Rancho
 
@@ -412,16 +365,13 @@ Mycoprotein Vats = Cubos de Micoproteína
 
 Reclamation Vats = Vatios de recuperación
 
-
 Pre-Med Lab = Laboratorio de premedicina
 
 Organ Farm = Granja de Organos
 
 Blood Bank = Banco de Sangre
 
-
 Organ Lab = Laboratorio de Organos
-
 
 Mosque = Mezquita
 
@@ -455,13 +405,11 @@ Protected Area = Área Protegida
 
 Gas Field = Campo de gas
 
-
 Distillery = Distilería
 
 Moonshinery = Licorero
 
 Chemical Extractor = Extractor químico
-
 
 Private Label = Etiqueta privada
 
@@ -492,7 +440,7 @@ Trade College = Instituto de Mercado
 
 College of Rhetoric = Instituto de Retorica
 
-College of Mystics = Instituto de Mística
+College of Mystics = Instituto de los Místico
 
 
  # Requires translation!
@@ -501,8 +449,7 @@ Clansman = miembro del clan
 
 Military School = Escuela Militar
 
-Initiate School = Escuela Inicial
-
+Initiate School = Escuela para Iniciados
 
 Experimental Lab = Laboratorio de experimentos
 
@@ -539,14 +486,13 @@ Listening Post = Puesto de Escucha
 
 Arena = Arena
 
-
 Prison Camp = Campo de Prisión
 
-Black Site = Lugar Osscuro
+Black Site = Lugar Oscuro
 
 Processing Center = Centro de Procesamiento
 
-Legion Camp = Campo Legionario
+Legion Camp = Campamento Legionario
 
 Narcotics Refinery = Refinería de Narcoticos
 
@@ -554,10 +500,9 @@ Narcotics Refinery = Refinería de Narcoticos
 Training Range = Rango de entrenamiento
 
 
-Guerilla Camp = Campo de Guerrilla
+Guerilla Camp = Campamento de Guerrilla
 
-
-Salvage Yard = Reparar Patio
+Salvage Yard = Saquear Patio
 
 Salvage Exchange = Restaurar Canjeos
 
@@ -575,7 +520,7 @@ Oil Plant = Planta de Petróleo
 
 Biofuel Refinery = Refinería de Biocombustible
 
-Hydro Plant = Planta Hidroelectrica
+Hydro Plant = Planta Hidroeléctrica
 
 Heat Plant = Planta de Calor
 
