--- a/jsons/translations/Spanish.properties
+++ b/jsons/translations/Spanish.properties
@@ -36,16 +36,9 @@ Primacy = Primacía
 Illuminated Order = Orden Iluminada
 Path of the Sage = Camino del Sabio
 Great Sage = Gran Sabio
- # Requires translation!
-[stat] cost for [param] units [amount]% = 
-
-
- # Requires translation!
-Funeral Rites = 
-
- # Requires translation!
-Thought Control = 
-
+[stat] cost for [param] units [amount]% = [stat] coste para [param] unidades [amount]%
+Funeral Rites = Rituales Funerarios
+Thought Control = adoctrinamiento
 
 #################### Lines from Buildings ####################
 
